# Distribution

./: CMakeLists.txt  buildmr.sh
depends/: Serializer.hpp  buttonrpc.hpp
src/: KeyValue.h  master.cpp  mrFunc.cpp  worker.cpp
tempRPC/: buttonrpc.hpp
tempRPC/dependencies/: zmq.h  zmq.hpp
